--- a/package.json
+++ b/package.json
@@ -17,15 +17,20 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "emailjs-com": "^3.2.0",
     "firebase": "^8.3.1",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^6.15.5",
+    "react-hook-form": "^7.17.3",
+    "react-hot-toast": "^2.1.1",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.5",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "sweetalert": "^2.1.2",
     "swiper": "^6.8.4",
     "web-vitals": "^1.1.1"
   },
