--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "^7.17.3",
     "react-hot-toast": "^2.1.1",
     "react-icons": "^4.3.1",
+    "react-modal": "^3.14.3",
     "react-redux": "^7.2.5",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
